--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
     margin: 0;
     -webkit-user-drag: none;
     font-family: SocialMediaFont;
+    color: #37343A;
 }
 
 body {
@@ -23,30 +24,10 @@ p {
     font-size: 16px;
     font-weight: 400;
     line-height: 1.75em;
-    color: #666;
+    color: #37343A;
 }
 
 a {
     text-decoration: none;
 }
 
-.section-title {
-    font-size: 45px;
-    font-family: Mon;
-    font-weight: 400;
-    color: #222;
-    position: relative;
-    margin-bottom: 20px;
-    line-height: 1.25em;
-}
-
-.section-subtitle {
-    font-size: 15px;
-    font-family: Mon;
-    font-weight: 400;
-    color:  #666;
-    text-transform: uppercase;
-    position: relative;
-    letter-spacing: 6px;
-    margin-bottom: 5px;
-}
