--- a/src/pages/HomePage/homePage.scss
+++ b/src/pages/HomePage/homePage.scss
@@ -20,7 +20,13 @@
       margin-top: 78px;
     }
   }
+  .mainTitle {
+    font-size: 90px;
+    line-height: 90px;
+    font-weight: 900;
+    color: helpers.$blackColor;
 
+  }
   >div {
     width: 100%;
     color: helpers.$blackColor;
@@ -42,11 +48,7 @@
       display: flex;
     }
 
-    .mainTitle {
-      font-size: 90px;
-      line-height: 90px;
-
-    }
+   
 
     .tiktok {
       font-size: 110px;
@@ -461,12 +463,11 @@
 }
 @media (max-width: 1750px) {
   .homepage-container {
+    .mainTitle {
+      font-size: 70px;
+      line-height: 70px;
+    }
     >div {
-      .mainTitle {
-        font-size: 70px;
-        line-height: 70px;
-      }
-
       .tiktok {
         font-size: 80px;
         line-height: 80px;
@@ -555,12 +556,11 @@
 
 @media (max-width: 1350px) {
   .homepage-container {
+    .mainTitle {
+      font-size: 50px;
+      line-height: 50px;
+    }
     >div {
-      .mainTitle {
-        font-size: 50px;
-        line-height: 50px;
-      }
-
       .tiktok {
         font-size: 60px;
         line-height: 60px;
@@ -679,5 +679,90 @@
   .short-form-container .short-form-relative .poiners-six {
     top: 60%;
     transform: translate(-243px, 10px);
+  }
+}
+@media (max-width: 1000px) {
+  .homepage-container {
+    .ima-mqsto{
+      flex-direction: row;
+      h6{
+        font-size: 27px;
+    margin-right: 10px
+      }
+        }
+
+  }
+  .homepage-container img {
+    width: 100%;
+}
+.homepage-container .mainTitle {
+  font-size: 45px;
+  line-height: 50px;
+}
+.homepage-container > div .tiktok {
+  font-size: 50px;
+  line-height: 60px;
+}
+.homepage-container .what-we-do .butn-dark {
+  align-self: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+.home-page-more-container {
+  padding: 0 5%;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.home-page-more {
+  font-size: 14px;
+  text-align: center;
+}
+.why-tiktok h1 {
+  font-size: 40px;
+  color: #FFFBFB;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+.why-tiktok .why-tiktok-inner-container {
+  flex-direction: column;
+  align-items: center;
+}
+.why-tiktok .why-tiktok-inner-container img {
+  width: 60%;
+}
+.why-tiktok .why-tiktok-inner-container .why-tiktok-righ-side {
+  align-items: center;
+}
+.why-tiktok .why-tiktok-inner-container .why-tiktok-righ-side p {
+  text-align: center;
+}
+}
+@media (max-width: 480px) {
+  .homepage-container .mainTitle {
+    font-size: 30px;
+    line-height: 30px;
+}
+  .homepage-container > div .tiktok {
+    font-size: 40px;
+    line-height: 40px;
+  }  
+  .homepage-container .ima-mqsto h6 {
+    font-size: 20px;
+    margin-right: 10px;
+}
+.why-tiktok h1 {
+  font-size: 40px;
+  color: #FFFBFB;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+}
+@media (max-width: 430px) {
+  .why-tiktok h1 {
+    font-size: 30px;
+    color: #FFFBFB;
+    text-transform: uppercase;
+    font-weight: 900;
   }
 }
