--- a/src/components/BrandSlider/styles.scss
+++ b/src/components/BrandSlider/styles.scss
@@ -4,11 +4,24 @@
 .keen-slider__slide{
   img{
     object-fit: contain;
-    max-height: 100px;
+    width: 5vw;
     filter: grayscale(1);
     &:hover{
       filter: none;
     }
   }
 
+}
+@media (max-width: 1000px) {
+  .keen-slider__slide{
+    img{
+      object-fit: contain;
+      width: 15vw;
+      filter: grayscale(1);
+      &:hover{
+        filter: none;
+      }
+    }
+  
+  }
 }
