--- a/src/pages/HomePage/homePage.scss
+++ b/src/pages/HomePage/homePage.scss
@@ -4,12 +4,15 @@
   display: flex;
   flex-direction: column;
   align-items: start;
+  gap: 5vw;
+  margin-bottom: 5vw;
 }
 
 .left-side-pointers {
   display: flex;
   flex-direction: column;
   align-items: end;
+  gap: 5vw;
 }
 
 .homepage-container {
@@ -81,7 +84,7 @@
     }
   }
 
-  img {
+  video {
     width: 50%;
   }
 }
@@ -139,7 +142,7 @@
       }
     }
 
-    img {
+    video {
       width: 24%;
       height: fit-content;
     }
@@ -189,7 +192,7 @@
     .short-form-video {
       width: 24%;
 
-      img {
+      video {
         width: 100%;
       }
     }
@@ -714,7 +717,7 @@
 
   }
 
-  .homepage-container img {
+  .homepage-container video {
     width: 100%;
   }
 
