--- a/src/pages/HomePage/homePage.scss
+++ b/src/pages/HomePage/homePage.scss
@@ -361,14 +361,14 @@
   align-items: center;
 
   >h4 {
-    font-size: 57px;
+    font-size: 50px;
     color: #37343A;
     display: flex;
     align-items: center;
     justify-content: center;
 
     h1 {
-      font-size: 100px;
+      font-size: 60px;
       font-weight: 900;
       color: helpers.$pinkColor;
       margin-left: 10px
@@ -386,7 +386,7 @@
 
 .home-page-banner {
   background-color: #DDE468;
-  padding: 10px 0%;
+  padding: 10px 10%;
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -398,14 +398,14 @@
     align-items: center;
 
     h1 {
-      font-size: 60px;
-      line-height: 60px;
+      font-size: 50px;
+      line-height: 50px;
       color: #FFFBFB;
     }
 
     h3 {
-      font-size: 50px;
-      line-height: 50px;
+      font-size: 30px;
+      line-height: 30px;
       color: #37343A;
     }
   }
@@ -416,6 +416,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  width: 100%;
   padding: 20px 0;
 
   .brands-title {
@@ -437,7 +438,11 @@
 
 .home-page-results {
   padding: 10px 0%;
+  width: 100%;
   background-color: helpers.$pinkColor;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
 
   .home-page-results-title {
     display: flex;
@@ -466,110 +471,111 @@
   .video-container {
     display: flex;
     justify-content: space-between;
-
+    max-width: 1280px;
+    align-self: center;
     >video {
       width: 22%;
     }
   }
 }
 
-@media (max-width: 1750px) {
-  .homepage-container {
-    .mainTitle {
-      font-size: 70px;
-      line-height: 70px;
-    }
+// @media (max-width: 1750px) {
+//   .homepage-container {
+//     .mainTitle {
+//       font-size: 70px;
+//       line-height: 70px;
+//     }
 
-    >div {
-      .tiktok {
-        font-size: 80px;
-        line-height: 80px;
-      }
-    }
-  }
+//     >div {
+//       .tiktok {
+//         font-size: 80px;
+//         line-height: 80px;
+//       }
+//     }
+//   }
 
-  .why-tiktok {
-    h1 {
-      font-size: 80px;
-      color: #FFFBFB;
-      text-transform: uppercase;
-      font-weight: 900;
+//   .why-tiktok {
+//     h1 {
+//       font-size: 80px;
+//       color: #FFFBFB;
+//       text-transform: uppercase;
+//       font-weight: 900;
 
-      strong {
-        color: #DDE468;
-        font-weight: 900;
+//       strong {
+//         color: #DDE468;
+//         font-weight: 900;
 
-      }
-    }
+//       }
+//     }
 
-    .why-tiktok-inner-container {
-      display: flex;
-      width: 100%;
-      justify-content: space-between;
+//     .why-tiktok-inner-container {
+//       display: flex;
+//       width: 100%;
+//       justify-content: space-between;
 
-      .why-tiktok-righ-side {
-        width: 60%;
-        display: flex;
-        flex-direction: column;
-        align-items: end;
+//       .why-tiktok-righ-side {
+//         width: 60%;
+//         display: flex;
+//         flex-direction: column;
+//         align-items: end;
 
-        p {
-          font-size: 18px;
-        }
+//         p {
+//           font-size: 18px;
+//         }
 
-        h3 {
-          font-size: 48px;
-        }
-      }
-    }
-  }
+//         h3 {
+//           font-size: 48px;
+//         }
+//       }
+//     }
+//   }
 
-  .short-form-container {
-    h1 {
-      font-size: 80px;
-    }
+//   .short-form-container {
+//     h1 {
+//       font-size: 80px;
+//     }
 
-    h3 {
-      font-size: 24px;
-    }
-  }
+//     h3 {
+//       font-size: 24px;
+//     }
+//   }
 
-  .home-services-title h1 {
-    font-size: 80px;
-  }
+//   .home-services-title h1 {
+//     font-size: 80px;
+//   }
 
-  .home-services-title img {
-    width: 54px;
-    height: 54px;
-  }
+//   .home-services-title img {
+//     width: 54px;
+//     height: 54px;
+//   }
 
-  .home-services-main-container>div h6 {
-    font-size: 24px;
-  }
+//   .home-services-main-container>div h6 {
+//     font-size: 24px;
+//   }
 
-  .home-services-main-container>div p {
-    text-align: center;
-    font-size: 18px;
-  }
+//   .home-services-main-container>div p {
+//     text-align: center;
+//     font-size: 18px;
+//   }
 
-  .why-social-media>h4 h1 {
-    font-size: 80px;
-  }
+//   .why-social-media>h4 h1 {
+//     font-size: 80px;
+//   }
 
-  .home-page-banner>div h1 {
-    font-size: 80px;
-    line-height: 80px;
-  }
+//   .home-page-banner>div h1 {
+//     font-size: 80px;
+//     line-height: 80px;
+//   }
 
-  .home-page-banner>div h3 {
-    font-size: 47px;
-    line-height: 47px;
-  }
+//   .home-page-banner>div h3 {
+//     font-size: 47px;
+//     line-height: 47px;
+//   }
 
-  .home-page-results .home-page-results-title h1 {
-    font-size: 70px;
-  }
-}
+//   .home-page-results .home-page-results-title h1 {
+//     font-size: 70px;
+//   }
+// }
 
 @media (max-width: 1350px) {
   .home-page-section {
@@ -596,18 +602,18 @@
   }
 
   .why-tiktok {
-    h1 {
-      font-size: 54px;
-      color: #FFFBFB;
-      text-transform: uppercase;
-      font-weight: 900;
+    // h1 {
+    //   font-size: 54px;
+    //   color: #FFFBFB;
+    //   text-transform: uppercase;
+    //   font-weight: 900;
 
-      strong {
-        color: #DDE468;
-        font-weight: 900;
+    //   strong {
+    //     color: #DDE468;
+    //     font-weight: 900;
 
-      }
-    }
+    //   }
+    // }
 
     .why-tiktok-inner-container {
       display: flex;
@@ -639,21 +645,21 @@
     }
   }
 
-  .short-form-container {
-    h1 {
-      font-size: 54px;
-      text-align: center;
-    }
+  // .short-form-container {
+  //   h1 {
+  //     font-size: 54px;
+  //     text-align: center;
+  //   }
 
-    h3 {
-      font-size: 20px;
-      text-align: center;
-    }
-  }
+  //   h3 {
+  //     font-size: 20px;
+  //     text-align: center;
+  //   }
+  // }
 
-  .home-services-title h1 {
-    font-size: 54px;
-  }
+  // .home-services-title h1 {
+  //   font-size: 54px;
+  // }
 
   .home-services-title img {
     width: 44px;
@@ -677,19 +683,19 @@
     font-size: 37px;
   }
 
-  .home-page-banner>div h1 {
-    font-size: 54px;
-    line-height: 54px;
-  }
+  // .home-page-banner>div h1 {
+  //   font-size: 54px;
+  //   line-height: 54px;
+  // }
 
-  .home-page-banner>div h3 {
-    font-size: 37px;
-    line-height: 37px;
-  }
+  // .home-page-banner>div h3 {
+  //   font-size: 37px;
+  //   line-height: 37px;
+  // }
 
-  .home-page-results .home-page-results-title h1 {
-    font-size: 50px;
-  }
+  // .home-page-results .home-page-results-title h1 {
+  //   font-size: 50px;
+  // }
 
   .home-page-results .home-page-results-title h3 {
     font-size: 37px;
