--- a/src/pages/HomePage/homePage.scss
+++ b/src/pages/HomePage/homePage.scss
@@ -121,6 +121,7 @@
     color: #FFFBFB;
     text-transform: uppercase;
     font-weight: 900;
+    margin: 30px 0;
 
     strong {
       color: #DDE468;
@@ -177,11 +178,14 @@
     color: #DDE468;
     font-size: 60px;
     font-weight: 900;
+    margin-top: 30px
+
   }
 
   h3 {
     color: #37343A;
     font-size: 30px;
+    margin-bottom: 30px
   }
 
   .short-form-relative {
@@ -257,14 +261,15 @@
   &-title {
     display: flex;
     align-items: center;
+    margin-bottom: 30px;
 
     img {
-      width: 84px;
-      height: 84px;
+      width: 64px;
+      height: 64px;
     }
 
     h1 {
-      font-size: 60px;
+      font-size: 50px;
       color: #37343A;
       font-weight: 900;
     }
@@ -583,7 +588,11 @@
       &.container-shape{
         padding: 0;
       }
+      &.why-tiktok {
+        padding: 0 10% 80px;
+      }
       padding: 0 10%
+      
     }
     
   }
@@ -621,7 +630,7 @@
       justify-content: space-between;
 
       .why-tiktok-righ-side {
-        width: 70%;
+        width: 60%;
         display: flex;
         flex-direction: column;
         align-items: end;
@@ -784,7 +793,7 @@
     align-items: center;
   }
 
-  .why-tiktok .why-tiktok-inner-container img {
+  .why-tiktok .why-tiktok-inner-container video {
     width: 60%;
   }
 
