--- a/src/pages/HomePage/homePage.scss
+++ b/src/pages/HomePage/homePage.scss
@@ -98,6 +98,7 @@
   display: flex;
   width: 100%;
   justify-content: center;
+  margin: 30px 0;
 }
 
 .home-page-more {
@@ -117,7 +118,7 @@
   width: 100%;
 
   h1 {
-    font-size: 60px;
+    font-size: 54px;
     color: #FFFBFB;
     text-transform: uppercase;
     font-weight: 900;
@@ -176,7 +177,7 @@
 
   h1 {
     color: #DDE468;
-    font-size: 60px;
+    font-size: 54px;
     font-weight: 900;
     margin-top: 30px
 
@@ -288,11 +289,10 @@
 
       p {
         text-align: center;
-        font-size: 20px;
       }
 
       h6 {
-        font-size: 28px;
+        font-size: 24px;
         color: #37343A;
       }
 
@@ -373,7 +373,7 @@
     justify-content: center;
 
     h1 {
-      font-size: 60px;
+      font-size: 54px;
       font-weight: 900;
       color: helpers.$pinkColor;
       margin-left: 10px
@@ -428,6 +428,7 @@
     display: flex;
     align-items: baseline;
     color: #37343A;
+    margin: 40px 0;
 
     h1 {
       font-size: 54px;
@@ -452,10 +453,15 @@
   .home-page-results-title {
     display: flex;
     align-items: baseline;
+    max-width: 1280px;
+    width: 100%;
+    align-self: center;
+    margin: 40px 0;
+  
 
     img {
-      width: 5vw;
-      height: 5vw;
+      width: 3vw;
+      height: 3vw;
     }
 
     h1 {
@@ -483,105 +489,6 @@
     }
   }
 }
-
-// @media (max-width: 1750px) {
-//   .homepage-container {
-//     .mainTitle {
-//       font-size: 70px;
-//       line-height: 70px;
-//     }
-
-//     >div {
-//       .tiktok {
-//         font-size: 80px;
-//         line-height: 80px;
-//       }
-//     }
-//   }
-
-//   .why-tiktok {
-//     h1 {
-//       font-size: 80px;
-//       color: #FFFBFB;
-//       text-transform: uppercase;
-//       font-weight: 900;
-
-//       strong {
-//         color: #DDE468;
-//         font-weight: 900;
-
-//       }
-//     }
-
-//     .why-tiktok-inner-container {
-//       display: flex;
-//       width: 100%;
-//       justify-content: space-between;
-
-//       .why-tiktok-righ-side {
-//         width: 60%;
-//         display: flex;
-//         flex-direction: column;
-//         align-items: end;
-
-//         p {
-//           font-size: 18px;
-//         }
-
-//         h3 {
-//           font-size: 48px;
-//         }
-//       }
-//     }
-//   }
-
-//   .short-form-container {
-//     h1 {
-//       font-size: 80px;
-//     }
-
-//     h3 {
-//       font-size: 24px;
-//     }
-//   }
-
-//   .home-services-title h1 {
-//     font-size: 80px;
-//   }
-
-//   .home-services-title img {
-//     width: 54px;
-//     height: 54px;
-//   }
-
-//   .home-services-main-container>div h6 {
-//     font-size: 24px;
-//   }
-
-//   .home-services-main-container>div p {
-//     text-align: center;
-//     font-size: 18px;
-//   }
-
-//   .why-social-media>h4 h1 {
-//     font-size: 80px;
-//   }
-
-//   .home-page-banner>div h1 {
-//     font-size: 80px;
-//     line-height: 80px;
-//   }
-
-//   .home-page-banner>div h3 {
-//     font-size: 47px;
-//     line-height: 47px;
-//   }
-
-//   .home-page-results .home-page-results-title h1 {
-//     font-size: 70px;
-//   }
-// }
-
 @media (max-width: 1350px) {
   .home-page-section {
     >div{
