--- a/src/pages/HomePage/homePage.scss
+++ b/src/pages/HomePage/homePage.scss
@@ -186,7 +186,8 @@
   h3 {
     color: #37343A;
     font-size: 30px;
-    margin-bottom: 30px
+    margin-bottom: 30px;
+    text-align: center;
   }
 
   .short-form-relative {
@@ -561,22 +562,6 @@
     }
   }
 
-  // .short-form-container {
-  //   h1 {
-  //     font-size: 54px;
-  //     text-align: center;
-  //   }
-
-  //   h3 {
-  //     font-size: 20px;
-  //     text-align: center;
-  //   }
-  // }
-
-  // .home-services-title h1 {
-  //   font-size: 54px;
-  // }
-
   .home-services-title img {
     width: 44px;
     height: 44px;
@@ -626,7 +611,7 @@
 
 @media (max-width: 1000px) {
   .home-services {
-    padding: 25px 10%;
+    margin: 30px 0;
 
     &-title {
       justify-content: center;
@@ -726,7 +711,7 @@
     gap: 2vw;
 
     >div {
-      width: 40%;
+      width: 48%;
     }
 
     .reverse-col {
@@ -784,6 +769,17 @@
 }
 
 @media (max-width: 750px) {
+  .home-page-banner > div{
+    padding: 30px 0;
+  }
+  .why-tiktok .why-tiktok-inner-container .why-tiktok-righ-side {
+    width: 100%;
+  }
+  .home-page-section{
+    >.home-page-brands{
+      padding: 0;
+    }
+  }
   .home-page-results {
     .video-container {
       flex-wrap: wrap;
@@ -856,7 +852,7 @@
       justify-content: center;
 
       h1 {
-        font-size: 25px;
+        font-size: 30px;
       }
 
       img {
@@ -876,8 +872,8 @@
       height: 25vw;
     }
     p {
-      font-size: 12px;
-      line-height: 14px;
+      font-size: 16px;
+      line-height: 16px;
     }
     h6 {
       font-size: 14px;
@@ -900,21 +896,22 @@
 }
 .why-social-media {
   padding: 80px 0;
+  margin: 30px 0;
   p {
-    font-size: 12px;
-    padding: 0 10%;
+    font-size: 16px;
   }
   img{
+    margin-top: 30px;
     width: 100%;
   }
 }
 .home-page-banner > div h1 {
-  font-size: 25px;
-  line-height: 25px;
+  font-size: 22px;
+  line-height: 22px;
 }
 .home-page-banner > div h3 {
-  font-size: 16px;
-  line-height: 18px;
+  font-size: 12px;
+  line-height: 12px;
 }
 .home-page-brands .brands-title {
   h1 {
@@ -922,6 +919,7 @@
   }
   h3 {
     font-size: 16px;
+    text-align: center;
     font-weight: 400;
   }
 }
